amended weather data
example geolocation + weather info

--- a/Pages/CssIsolationExample.razor
+++ b/Pages/CssIsolationExample.razor
@@ -1,8 +1,8 @@
 ﻿@page "/cssisolation" 
 
-<h1>This text will be a different colour</h1>
+<h1>This is a standard heading. It will have the standard text colour. </h1>
 
-<TechTalkBlazor.Components.HeadingWithScopedCss Message="than this one, even though they're both h1"></TechTalkBlazor.Components.HeadingWithScopedCss>
+<TechTalkBlazor.Components.HeadingWithScopedCss Message="This heading is set via a component and uses CSS Isolation."></TechTalkBlazor.Components.HeadingWithScopedCss>
 
 @code {
 
