--- a/Pages/FetchData.razor
+++ b/Pages/FetchData.razor
@@ -26,8 +26,7 @@ else
                 <tr>
                     <td>@forecast.Date.ToShortDateString()</td>
                     <td>@forecast.TemperatureC</td>
-                    <td>@forecast.TemperatureF</td>
-                    <td>@forecast.Summary</td>
+                    <td>@forecast.WeatherInformation.Description</td>
                 </tr>
             }
         </tbody>
@@ -44,12 +43,20 @@ else
 
     public class WeatherForecast
     {
+        public string City { get; set; }
+
         public DateTime Date { get; set; }
 
         public int TemperatureC { get; set; }
 
-        public string Summary { get; set; }
+        public WeatherInfo WeatherInformation { get; set; }
 
-        public int TemperatureF => 32 + (int)(TemperatureC / 0.5556);
+    }
+
+
+    public class WeatherInfo
+    {
+        public string Icon { get; set; }
+        public string Description { get; set; }
     }
 }
