isolation example tweak

--- a/Pages/CssIsolationExample.razor
+++ b/Pages/CssIsolationExample.razor
@@ -2,7 +2,7 @@
 
 <h1>This is a standard heading. It will have the standard text colour. </h1>
 
-<TechTalkBlazor.Components.HeadingWithScopedCss Message="This heading is set via a component and uses CSS Isolation."></TechTalkBlazor.Components.HeadingWithScopedCss>
+<HeadingWithScopedCss Message="This heading is set via a component and uses CSS Isolation."></HeadingWithScopedCss>
 
 @code {
 
