--- a/Pages/GeolocationExample.razor
+++ b/Pages/GeolocationExample.razor
@@ -33,7 +33,7 @@ else
     <h2>@userForecast.City</h2>
     <h3>@userForecast.WeatherInformation.Description</h3>
     <h3>@userForecast.TemperatureC°</h3>
-    <img src="@userForecast.WeatherInformation.Icon" />
+    <img src="@userForecast.WeatherInformation.Icon" class="mx-auto" />
 </div>
 }
 else
