--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -14,12 +14,12 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="geolocation">
-                <span class="oi oi-plus" aria-hidden="true"></span> Geolocation Example
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Geolocation Example
             </NavLink>
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="cssisolation">
-                <span class="oi oi-plus" aria-hidden="true"></span> Css Isolation Example
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Css Isolation Example
             </NavLink>
         </li>
         <li class="nav-item px-3">
